@@ -1,4 +1,0 @@
-@echo off
-cls
-call ant -f build.xml disable_unittest
-pause
