@@ -1,4 +1,0 @@
-@echo off
-cls
-call ant -f build.xml reset
-pause
